syntax = "proto3";
import "google/protobuf/timestamp.proto";

package task;

service TasksService {
    rpc CreateTask(ICreateTaskDto) returns (ITaskReponse) {}
    rpc FindAllTask(IGetTaskUserDto) returns (ITaskReponse) {}
    rpc FindOneTask (IFindOneTaskDto) returns (ITaskReponse) {}
    rpc UpdateTask (IUpdateTaskDto) returns (ITaskReponse) {}
    rpc RemoveTask (IFindOneTaskDto) returns (ITaskReponse) {}
} 

message IGetTaskUserDto {
    int32 userId = 1;
}

message IError {
    int32 errorCode = 1;
    string errorMsg = 2;
}

message ITaskReponse {
    repeated ITask data = 1;
    IError error = 2;
    string message = 3;
    bool isError = 4;    
}

message IUpdateTaskDto{
    int32 id = 1;
    string title = 2;
    string description = 3;
    string due_date = 4;
    string status = 5;
}

message IFindOneTaskDto {
    int32 id = 1;
}

message IEmpty {};

message ITasks {
    repeated ITask tasks = 1;
}
message ICreateTaskDto {
    string title = 2;
    string description = 3;
    string due_date = 4;
    string status = 5;
    string user_id = 6;
}

message ITask {
    int32 id = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp due_date = 4;
    string status = 5;
    google.protobuf.Timestamp created_at = 6;
    User user = 7;
}

message User {
    int32 id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string refreshToken=5;
    google.protobuf.Timestamp created_at = 6;

}